<resources>
    <string name="app_name">ChattrBox</string>
    <string name="essential_activity">Essential Activity</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="textview">TextView</string>
    <string name="essentials">Essentials</string>
    <string name="add_item">Add Item</string>
    <string name="button">Button</string>
    <string name="category">Category</string>
    <string name="todo">TODO</string>
    <string name="record">Record</string>
    <string name="sample">Sample</string>
    <string name="item_name">item name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="places">Places</string>
    <string name="people">People</string>
    <string name="activities">Activities</string>
    <string name="read">Read</string>
    <string name="x">X</string>
    <string name="delete">delete</string>
    <string name="delete_item">Delete Item</string>
</resources>
